🤟🥠 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@ Select ONE Additional
   <body>
     <div class="container">
       <div>
-        <h2 id="end">🍂🌼🌞⛄ | My Favorite Season</h2>
+        <h2 id="end">🍂🌼🌞⛄</h2>
+        <h3> My Favorite Season
+        </h3>
         <canvas id="myCanvas" data-processing-sources="myP5Code.pde"> </canvas>
       </div>
     </div>
